<resources>
    <string name="app_name">My First App</string>
    <string name="floating_button_content">Add new Joke</string>
    <string name="add_joke_title">Введите анекдот</string>
    <string name="addJokeButton_text">Добавить анекдот</string>
    <string name="category">Категория</string>
    <string name="question">Вопрос</string>
    <string name="answer">Ответ</string>
    <string name="no_jokes_text">Шутки кончились, добавьте еще</string>
    <string name="is_from_net_true">Из сети</string>
    <string name="is_from_net_false">Локально</string>
    <string name="is_load_from_cache_true">Отсутствует соединение с сетью\nАнекдоты восстановлены из кэша</string>
    <string name="btn_favorite_content_description">btn_favorite</string>
</resources>