<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_900" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".presentation.add_joke.AddJokeFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/add_joke_title"
            android:textColor="@color/green_100"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/frame_style"
            android:hint="@string/category"
            android:inputType="textCapSentences"
            android:padding="13dp"
            android:textColor="@color/green_300"
            android:textColorHint="@color/green_700"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/frame_style"
            android:hint="@string/question"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="3"
            android:padding="13dp"
            android:textColor="@color/green_300"
            android:textColorHint="@color/green_700"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCategory" />

        <EditText
            android:id="@+id/editTextAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/frame_style"
            android:gravity="start|top"
            android:hint="@string/answer"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="3"
            android:padding="13dp"
            android:textColor="@color/green_300"
            android:textColorHint="@color/green_700"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextQuestion" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/frame_style_button"
            android:fontFamily="sans-serif"
            android:padding="13dp"
            android:text="@string/addJokeButton_text"
            android:textAllCaps="false"
            android:textColor="@color/green_100"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAnswer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>